--- a/docs/locales/ru/LC_MESSAGES/index.po
+++ b/docs/locales/ru/LC_MESSAGES/index.po
@@ -1,15 +1,31 @@
 #: ../../index.rst:3
+msgid "pgCodeKeeper User Guide"
+msgstr "Руководство пользователя pgCodeKeeper"
+
+#: ../../index.rst:5
 msgid "The pgCodeKeeper plugin is designed to compare PostgreSQL database schemas and selectively use differences, taking into account possible dependencies between schema objects."
 msgstr "Плагин pgCodeKeeper предназначен для сравнения схем БД PostgreSQL и выборочного применения различий, с учетом возможных зависимостей между объектами схемы."
 
-#: ../../index.rst:5
+#: ../../index.rst:7
 msgid "Working with pgCodeKeeper is done using the project. It is a database schema object stored in separate files in a hierarchical structure."
 msgstr "Работа с pgCodeKeeper осуществляется с помощью проекта. Он представляет собой объекты схемы БД, хранимые в отдельных файлах в иерархической структуре."
 
-#: ../../index.rst:7
+#: ../../index.rst:9
 msgid "Using the project, you can view the structure of file objects, and create a script for managing projects on the database, or vice versa, modify the project structure with objects from a database."
 msgstr "С помощью проекта возможно просмотреть структуру объектов-файлов, и создать скрипт наката схемы проекта на БД, или наоборот, модифицировать структуру проекта объектами из какой-либо БД."
 
-#: ../../index.rst:9
+#: ../../index.rst:11
 msgid "The pgCodeKeeper source code in open source, and available on "
 msgstr "Исходный код pgCodeKeeper находится в свободном доступе и доступен на "
+
+#: ../../index.rst:17
+msgid "Getting started"
+msgstr "Начало работы"
+
+#: ../../index.rst:28
+msgid "Tasks"
+msgstr "Задачи"
+
+#: ../../index.rst:41
+msgid "Other information"
+msgstr "Дополнительная информация"
