--- a/docs/locales/ru/LC_MESSAGES/about.po
+++ b/docs/locales/ru/LC_MESSAGES/about.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pgCodeKeeper 4.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-01 13:10+0300\n"
+"POT-Creation-Date: 2018-03-02 12:00+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,7 +19,7 @@ msgstr ""
 "Generated-By: Babel 2.5.3\n"
 
 #: ../../about.rst:3
-msgid "О программе pgCodeKeeper"
+msgid "О дополнении pgCodeKeeper"
 msgstr ""
 
 #: ../../about.rst:5
