--- a/docs/locales/ru/LC_MESSAGES/installation.po
+++ b/docs/locales/ru/LC_MESSAGES/installation.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pgCodeKeeper 4.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-05-17 16:24+0300\n"
+"POT-Creation-Date: 2018-05-17 17:00+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -23,18 +23,18 @@ msgid "Установка"
 msgstr ""
 
 #: ../../installation.rst:6
-msgid "Eclipse marketplace"
+msgid "Eclipse Marketplace"
 msgstr ""
 
 #: ../../installation.rst:8
 msgid ""
 "Самый простой путь установить pgCodeKeeper - Eclipse Marketplace : в "
-"запущенном экземпляре Eclipse версии 4.2 или выше с установленным "
-"markeplace, выбрать **Help > Eclipse Markeplace...**."
+"запущенном экземпляре Eclipse версии 4.2 или выше с установленным Eclipse"
+" Marketplace, выбрать **Help > Eclipse Markeplace...**."
 msgstr ""
 
 #: ../../installation.rst:10
-msgid "В поле поиска набрать pgCodeKeeper."
+msgid "В поле поиска ввести: pgCodeKeeper."
 msgstr ""
 
 #: ../../installation.rst:12
@@ -85,27 +85,3 @@ msgid ""
 "пользовательским соглашением, нажмите кнопку **Finish** и начнется "
 "установка."
 msgstr ""
-
-#~ msgid ""
-#~ "Самый простой путь получить pgCodeKeeper "
-#~ "– сайт обновлений: в запущенном "
-#~ "экземпляре Eclipse версии 4.2 или выше,"
-#~ " выбрать **Help> Install New Software...**"
-#~ " Откроется мастер установки плагинов "
-#~ "средствами сайта обновлений."
-#~ msgstr ""
-
-#~ msgid ""
-#~ "В поле **Work With** ввести путь к"
-#~ " сайту обновлений. Это может быть как"
-#~ " удаленный ресурс "
-#~ "http://pgcodekeeper.ru/update/release/, так и "
-#~ "локальный в вашей файловой системе."
-#~ msgstr ""
-
-#~ msgid ""
-#~ "Запустите Eclipse и выберите **Window> "
-#~ "Perspective> Open Perspective> Other> "
-#~ "pgCodeKeeper**."
-#~ msgstr ""
-
