--- a/docs/locales/en/LC_MESSAGES/index.po
+++ b/docs/locales/en/LC_MESSAGES/index.po
@@ -35,7 +35,7 @@ msgstr "Using the project, it is possible to view the structure of files-objects
 
 #: ../../index.rst:11
 msgid "Исходный код pgCodeKeeper находится в свободном доступе и доступен на `GitHub <https://github.com/pgcodekeeper/pgcodekeeper>`_."
-msgstr "pgCodeKeeper source code is available at `GitHub <https://github.com/pgcodekeeper/pgcodekeeper>`_. for free"
+msgstr "pgCodeKeeper source code is available at `GitHub <https://github.com/pgcodekeeper/pgcodekeeper>`_ for free."
 
 #: ../../index.rst:17
 msgid "Начало работы"
